[tool.poetry]
name = "DuckDuckLLM"
version = "0.1.0"
description = "AI search engine powered by DuckDuckGo and Mistral 7B."
authors = ["Saikat Kumar Dey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckduckgo-search = "^4.1.0"
streamlit = "^1.29.0"
streamlit-searchbox = "^0.1.6"
streamlit-card = "^1.0.0"
openai = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
